--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-/node_modules/
+out
+node_modules
+dist/bundle.js
+.idea/*
+yarn.lock
+yarn-error.log
+npm-debug.log
+*.trace
+**/*.png
+stats.json
